--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
+<h1>Signup</h1>
 <%= form_for(@user, url: yield(:path)) do |f| %>
-  <%#= render 'shared/error_messages', object: f.object %>
+  <%= render 'shared/error_messages', object: f.object %>
 
   <%= f.label :username %>:
   <%= f.text_field :username %><br>
