--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,6 +1,6 @@
 <li id="event-<%= event.id %>">
 	<span class="user"><%= link_to event.creator.username, event.creator %></span>
-	<span class="title"><%= event.title %></span>
+	<span class="title"><%= link_to event.title, event %></span>
 	<span class="location"><%= event.location %></span>
 	<span class="event_time"><%= event.event_time %></span>
 	<span class="event_date"><%= event.event_date %></span>
