--- a/app/views/events/_attending.html.erb
+++ b/app/views/events/_attending.html.erb
@@ -1,4 +1,5 @@
-<h3>People Attending</h3>
+<h4>People Attending</h4>
 <% @attending.each do |f| %>
-		<span class="user"><%= f.username %></span>
+		<span class="user"><%= link_to f.username, f %></span> |
 <% end %>
+</div>
