--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,24 +3,46 @@
     <%= link_to "Private Events", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
+        <li>
+           <%= link_to events_path do %>
+            <i class="glyphicon glyphicon-list-alt"></i>
+            <span class="header-button">Events</span>
+           <% end %>
+         </li>
         <% if logged_in? %>
-          <li><%= link_to "Events", events_path %></li>
+          <li>
+            <%= link_to new_event_path do %>
+              <i class="glyphicon glyphicon-plus"></i>
+              <span class="header-button">Create Event</span>
+            <% end %>
+          </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", '#' %></li>
+              <li>
+                <%= link_to current_user do %>
+                  <i class="glyphicon glyphicon-user"></i>
+                  <span class="header-button">Profile</span>
+                <% end %>
+              </li>
               <li class="divider"></li>
               <li>
-                <%= link_to "Log out", logout_path, method: :delete %>
+                <%= link_to logout_path, method: :delete do %>
+                  <i class="glyphicon glyphicon-log-out"></i>
+                  <span class="header-button">Log out</span>
+                <% end %>
               </li>
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "Log in", login_path %></li>
+          <li>
+            <%= link_to login_path do %>
+              <i class="glyphicon glyphicon-log-in"></i>
+              <span class="header-button">Log in</span>
+            <% end %>
+          </li>
         <% end %>
       </ul>
     </nav>
