--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,25 @@
-<h1>Signup</h1>
-<%= form_for(@user, url: yield(:path)) do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
+<% provide(:title, "Sign Up") %>
+<div class="row">
+  <div class="col-sm-4 col-sm-offset-4 well">
+  <h2>Sign Up</h2>
+    <%= form_for(@user) do |f| %>
+      <%= render 'shared/error_messages', object: f.object %>
 
-  <%= f.label :username %>:
-  <%= f.text_field :username %><br>
+      <%= f.label :username %>
+      <%= f.text_field :username, class: "form-control" %><br>
 
-  <%= f.label :email %>:
-  <%= f.email_field :email %><br>
+      <%= f.label :email %>
+      <%= f.email_field :email, class: "form-control" %><br>
 
-  <%= f.label :password %>:
-  <%= f.password_field :password %><br>
+      <%= f.label :password %>
+      <%= f.password_field :password, class: "form-control" %><br>
 
-  <%= f.label :password_confirmation %>:
-  <%= f.password_field :password_confirmation %><br>
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, class: "form-control" %><br>
 
-  <%= f.submit 'Submit', :name => 'submit' %>
-<% end %>
+      <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+
+      <%= f.submit 'Submit', :name => 'submit', class: "form-control btn btn-info" %>
+    <% end %>
+  </div>
+</div>
