deliver assets in production

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -84,7 +84,7 @@ p {
   padding-left: 0px;
   padding-right: 0px;
   text-align: center;
-  background: url(background.jpeg) no-repeat center center;
+  background: image-url(background.jpeg) no-repeat center center;
   background-size: cover;
 }
 
