--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3,6 +3,11 @@
 
 /* universal */
 
+body, html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   padding-top: 50px;
   background-color: #E3E3E3;
@@ -78,20 +83,25 @@ p {
 
 /* home page */
 
-.home-image {
-  padding-top: 200px;
-  padding-bottom: 200px;
-  padding-left: 0px;
-  padding-right: 0px;
-  text-align: center;
+.full-page {
+  min-height: 100%;
+  height: auto;
+  padding: 50px 0 50px;
+  overflow: hidden;
   background: image-url('background.jpeg') no-repeat center center;
   background-size: cover;
+}
+
+.home-image {
+  text-align: center;
+
 }
 
 .welcome-message {
   color: white;
   text-shadow: 2px 2px 6px black;
   font-family: Helvetica;
+  padding-top: 20%;
 }
 
 .btn {
